# iot_machine_learning

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  AUDIT_ARCHITECTURE.md  AUDIT_ARCHITECTURE_DEEP.md  AUDIT_COGNITIVE_ENGINE.md  AUDIT_UTSAE_AGNOSTIC.md  AUDIT_ZENIN_V020_TECHNICAL.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENGINES.md  LICENSE  MIGRATION_SCORECARD.md  README.md  README_ENTERPRISE.md  README_PHASE1.md  SECURITY.md  UNIVERSAL_ENGINES_INTEGRATION.md  UTSAE_ARCHITECTURE.md  __init__.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  test_sanitize_debug.py  test_universal_e2e.py
.devin/: wiki.json
application/: __init__.py  analyze_document.py
application/dto/: __init__.py  decision_output.py  prediction_dto.py  text_decision_output.py
application/evaluation/: __init__.py  dataset.py  metrics.py  quality_score.py  report_generator.py  runner.py  validate.py
application/explainability/: __init__.py  explanation_renderer.py
application/interfaces/: decision_service_interface.py
application/ports/: decision_service_port.py
application/services/: __init__.py  (+2 more)
benchmarks/: explainability_benchmarks.py  forensic_ensemble_collector.py  memory_benchmarks.py  nab_forensic_analysis.py  nab_machine_temp_benchmark.py
core/: __init__.py
docs/: API.md  BACKLOG_PERFORMANCE.md  ENGINES.md  QUICKSTART.md  STRATEGIC_MARKET_ANALYSIS.md  anomaly_detection.md  api.md  architecture.md  audit_technical.md  compliance_and_audit.md  configuration.md  development.md  drift_and_adaptation.md  ml_pipeline.md  operations.md  plasticity.md  roi_and_business_case.md  technical_debt.md
domain/: __init__.py
infrastructure/: __init__.py  redis_keys.py
ml/: __init__.py  baseline.py  metadata.py  pattern_detector.py
ml_api/: __init__.py
ml_batch/: __init__.py
ml_service/: governance_initializer.py  in_memory_broker.py  lifespan.py  main.py  reading_broker.py  sliding_window_buffer.py  warmup.py
ml_stream/: __init__.py
results/: Información Chiller y CA - ZENIN.xlsx  alpla_pipeline_results.json  analysis_summary.txt  analyze_alpla_dataset.py  analyze_alpla_deep.py  analyze_ml_quality.py  ca_with_anomalies.csv  chiller_with_anomalies.csv  dataset_profile.txt  prepare_weaviate_output.py  run_alpla_pipeline.py  weaviate_ready_output.json  weaviate_summaries_readable.txt
scripts/: benchmark_kalman_vs_ensemble.py  create_weaviate_schema.py  create_zenin_weaviate_schema.py  extract_training_data.py  start_document_processor.sh  test_zenin_ml_write.py  training_extractor.py
tests/: __init__.py  test1.py  test_engine_parity.py  test_iot_adapter.py  test_sliding_window.py  test_telemetry_endpoint.py  test_validation.py  test_zenin_ml_storage.py
(+2114 files in other folders)
