[tool.poetry]
name = "zenin-ml"
version = "0.1.0"
description = "Motor ML unificado para la plataforma Zenin IoT"
authors = ["Zenin Team"]
readme = "README.md"
python = ">=3.10,<4.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.32.0,<1.0.0"}
pydantic = ">=2.10.0,<3.0.0"
pyodbc = ">=5.2.0,<6.0.0"
sqlalchemy = ">=2.0.0,<3.0.0"
redis = ">=5.0.0,<6.0.0"
paho-mqtt = ">=2.0.0,<3.0.0"
numpy = ">=1.24.0,<3.0.0"
scipy = ">=1.11.0,<2.0.0"
scikit-learn = ">=1.3.0,<2.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
pyyaml = ">=6.0,<7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0,<9.0.0"
pytest-asyncio = ">=0.21.0,<1.0.0"
pytest-cov = ">=4.1.0,<6.0.0"
typeguard = ">=4.0.0,<5.0.0"
ruff = ">=0.1.0,<1.0.0"
mypy = ">=1.7.0,<2.0.0"
types-redis = ">=4.6.0"
types-pyyaml = ">=6.0.0"

# ─── Ruff (linter) ───────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (manejado por line-length)
    "B008",  # do not perform function calls in default arguments
]
exclude = [
    "domain/entities/iot/",        # legacy deprecado
    "infrastructure/adapters/legacy/",  # adapters de compatibilidad
    "tests/",
    ".venv/",
    "__pycache__/",
]

[tool.ruff.isort]
known-first-party = ["domain", "application", "infrastructure", "ml_service", "config"]

# ─── Mypy (type checker) ─────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "domain/entities/iot/",
    "infrastructure/adapters/legacy/",
    "tests/",
]

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

# ─── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["domain", "application", "infrastructure"]
omit = [
    "domain/entities/iot/*",
    "infrastructure/adapters/legacy/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 40    # baseline actual — subir a 80 en T16

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
